# sqlite-url

./: .gitignore  Cargo.toml  Makefile  README.md  VERSION  core_init.c  docs.md  sqlite-url.c  sqlite-url.h  test.sql
.github/workflows/: release.js  release.yaml  test.yaml  upload-deno-assets.js  upload.js
bindings/ruby/: sqlite_url.gemspec
bindings/ruby/lib/: sqlite_url.rb  version.rb  version.rb.tmpl
bindings/sqlite-utils/: README.md  pyproject.toml  pyproject.toml.tmpl
bindings/sqlite-utils/sqlite_utils_sqlite_url/: __init__.py
deno/: README.md  README.md.tmpl  deno.json  mod.ts  test.ts
npm/: README.md
npm/sqlite-url/: README.md  package.json  test.js
npm/sqlite-url-darwin-x64/: README.md  package.json
npm/sqlite-url-linux-x64/: README.md  package.json
npm/sqlite-url-windows-x64/: README.md  package.json
npm/sqlite-url/src/: index.js
python/: README.md
python/datasette_sqlite_url/: README.md  setup.py
python/datasette_sqlite_url/datasette_sqlite_url/: __init__.py
python/datasette_sqlite_url/tests/: test_sqlite_path.py
python/sqlite_url/: README.md  setup.py
python/sqlite_url/sqlite_url/: __init__.py
scripts/: deno_generate_package.sh  npm_generate_platform_packages.sh
src/: lib.rs
tests/: test-loadable.py  test-python.py  test-sqlite3.py
